# PM-Assistant

./: .env.example  .gitignore  .pandoc-header.tex  CLAUDE.md  README.md
.claude/: settings.json
.claude/commands/: discover.md  eval.md  grill-me.md  gtm.md  ingest.md  jira.md  link-check.md  next.md  ost.md  outcomes.md  pm-dash.md  prd.md  quality-check.md  quick-insight.md  refresh.md  retro.md  search.md  shape-up.md  status.md  strategy.md  uat.md  ux.md  weekly.md
.claude/hooks/: session-context.sh  validate-crosslinks.sh  validate-frontmatter.sh
data/evals/: eval-gtm-2026-03-27-001.json  eval-gtm-2026-03-27-002.json  eval-insight-2026-03-27-001.json  eval-insight-2026-03-27-002.json  eval-insight-2026-03-27-003.json  eval-insight-2026-03-27-004.json  eval-journey-2026-03-27-001.json  eval-prd-2026-03-27-001.json
data/insights/: batch-devex-platform-gaps-2026-03-27.md  ci-pipeline-developer-friction-2026-03-27.md  component-library-discoverability-2026-03-27.md  platform-change-communication-gap-2026-03-27.md  service-onboarding-toil-2026-03-27.md
data/interviews/: david-okafor-sre-2026-03-07.md  lisa-chang-frontend-engineer-2026-03-06.md  raj-mehta-backend-engineer-2026-03-05.md
data/meta/: counters.json  ingestion_log.json  learnings.md  (+2 more)
docs/: GeminiCLIConversion.md  assumptions-as-code-proposal.md  grill-me-deliberate-proposal.md  platform-as-product-proposal.md  quantitative-analysis-proposal.md  simulate-command-proposal.md
mcp-servers/figma-server/: config.py  figma_client.py  pyproject.toml  server.py  tools.py
mcp-servers/jira-server/: config.py  jira_client.py  pyproject.toml  server.py  tools.py
mcp-servers/lucid-server/: config.py  lucid_client.py  pyproject.toml  server.py  tools.py
mcp-servers/miro-server/: config.py  miro_client.py  pyproject.toml  server.py  tools.py
mcp-servers/slack-server/: config.py  pyproject.toml  server.py  slack_client.py  tools.py
scripts/: seed-data.sh  setup-mcp.sh
(+62 files in other folders)
