[project]
name = "pm-assistant-figma-server"
version = "0.1.0"
description = "Figma MCP server for PM Assistant — design file access, asset export, and comment management"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "httpx",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
