[project]
name = "pm-assistant-slack-server"
version = "0.1.0"
description = "Slack MCP server for PM Assistant — search, post, and manage Slack messages"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
